--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@vanilla-extract/vite-plugin": "^5.0.1",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^7.2.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.16.0",
